<resources>
    <string name="app_name">ELM327 Emulator</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_title">ELM327 Emulator</string>
    <string name="com_bridge_bt_classic">Bluetooth Classic</string>
    <string name="com_bridge_ble">Bluetooth LE</string>
    <string name="com_bridge_nt">Network</string>
    <string name="log_btnDownload">Download log</string>
    <string name="log_btnSave">Save as...</string>
    <string name="log_btnClear">Clear log</string>
    <string name="log_btnUp">↑</string>
    <string name="log_btnDown">↓</string>
    <string name="log_search_hint">text, bins eg. 4100 ...</string>
    <string name="logview_search">Search</string>
    <string name="logview_download">Save</string>
    <string name="logview_download_as">Save as</string>
    <string name="logview_clear">Clear</string>
    <string name="logview_saved_as">Save as %1$s</string>
    <string name="settings_autostart">Autostart emulator on app launch</string>
    <string name="settings_section_general">General Settings</string>
    <string name="settings_section_bluetooth">Bluetooth Settings</string>
    <string name="settings_section_ble">Bluetooth LE Settings</string>
    <string name="settings_section_wifi">Wi-Fi Settings</string>
    <string name="settings_bt_device_classic">Classic</string>
    <string name="settings_bt_device_ble">BLE</string>
    <string name="settings_section_bt_classic">Bluetooth Classic(RFCOMM SPP) Settings</string>
    <string name="settings_bt_classic_duplicate_warning">Warning: multiple paired devices have the same name, that can be a hint that you have BLE paired additionally to Classic SPP, please forget the pair and do it again with button below</string>
    <string name="settings_bt_classic_ensure_device_paired">Ensure device paired</string>
    <string name="settings_bt_classic_ensure_device_paired_summary">View paired Bluetooth devices and pairing status</string>
    <string name="settings_bt_classic_paired_devices">Paired Bluetooth devices</string>
    <string name="settings_bt_classic_no_paired_devices">No paired Bluetooth devices</string>
    <string name="settings_bt_classic_pair">Pair</string>
    <string name="settings_bt_classic_pairing">Pairing…</string>
    <string name="settings_bt_classic_paired">Paired</string>
    <string name="settings_bt_classic_connected">Connected</string>
    <string name="settings_bt_classic_offline">Offline</string>
    <string name="settings_bt_classic_unknown">Unknown</string>
    <string name="settings_bt_classic_close">Close</string>
    <string name="settings_bt_classic_pair_new">Pair a new device</string>
    <string name="settings_log_exchange_dup_search">Group duplicate entries</string>
    <string name="settings_log_exchange_dup_search_depth">Depth of duplicate search (in n exchanges)</string>
    <string name="settings_log_signal_value">Decode data and print signals values</string>
    <string name="settings_btLabel">Bluetooth device name</string>
    <string name="settings_btHint">OBD II</string>
    <string name="settings_logLevelLabel">Log level</string>
    <string name="settings_log_timestamp">Show timestamp in log</string>
    <string name="settings_networkLabel">Networking mode</string>
    <string name="settings_elmTitle">ELM327 parameters</string>
    <string name="settings_protocolLabel">Running protocol</string>
    <string name="settings_missing_permission">Missing permission</string>
    <string name="settings_network_bluetooth">Bluetooth</string>
    <string name="settings_network_ble">Bluetooth LE (4.0+)</string>
    <string name="settings_network_network">Network</string>
    <string name="settings_ble_profiles_title">BLE Profile</string>
    <string name="settings_ble_profile_custom_title">Custom BLE Profile</string>
    <string name="settings_ble_profile_service_uuid">Service UUID</string>
    <string name="settings_ble_profile_tx_uuid">TX Characteristic UUID</string>
    <string name="settings_ble_profile_rx_uuid">RX Characteristic UUID</string>
    <string name="sim_connected_clients">0 connected</string>
    <string name="sim_connected_clients_format">%1$d connected</string>
    <string name="sim_connected_clients_dialog_title">Connected clients</string>
    <string name="sim_connected_clients_warning">Warning: multiple clients simultaneously is not recommended</string>
    <string name="sim_managed_responses">Managed responses</string>
    <string name="custom_serial_toolbar_title">Replay log</string>
    <string name="custom_serial_toolbar_arrow_down">▼</string>
    <string name="custom_serial_toolbar_arrow_up">▲</string>
    <string name="custom_serial_replay_speed">Playback speed:</string>
    <string name="custom_serial_replay_start">Start replay</string>
    <string name="custom_serial_replay_stop">Stop replay</string>
    <string name="custom_serial_replay_script_not_running">Start the custom serial script first</string>
    <string name="custom_serial_replay_no_log">No log entries to replay</string>
    <string name="custom_serial_replay_error">Replay error: %1$s</string>
    <string name="sim_custom_serial_script_import_clipboard_empty">Clipboard is empty</string>
    <string name="sim_custom_serial_script_import_clipboard_success">Script imported from clipboard</string>
    <string name="sim_custom_serial_script_import_clipboard_error">Failed to import script: %1$s</string>
    <string name="sim_custom_serial_script_import_clipboard">clipboard</string>
    <string name="sim_custom_serial_script_import_file">file</string>
    <string name="sim_custom_serial_script_import_menu">Import</string>
    <string name="sim_custom_serial_script_export_menu">Export</string>
    <string name="sim_custom_serial_script_export_clipboard">clipboard</string>
    <string name="sim_custom_serial_script_export_clipboard_success">Exported to clipboard</string>
    <string name="sim_custom_serial_script_export_file">file</string>
    <string name="sim_custom_serial_script_save">Save</string>
    <string name="sim_custom_serial_script_save_name">Script name</string>
    <string name="sim_custom_serial_script_save_invalid_name">Enter a script name.</string>
    <string name="sim_custom_serial_script_save_error">Cannot create script directory.</string>
    <string name="sim_custom_serial_script_save_success">Saved %1$s</string>
    <string name="sim_custom_serial_script_save_error_detail">Cannot save script: %1$s</string>
    <string name="activity_export_file_success">Export success</string>
    <string name="sim_customserial_edit_send_timeout_label">Timeout (ms):</string>
    <string name="sim_customserial_edit_send_text_label">ASCII text:</string>
    <string name="sim_customserial_edit_send_eol">Automatically append EOL</string>
    <string name="sim_customserial_edit_send_interpret_escapes">Interpret \\r, \\n, \\xhh...</string>
    <string name="sim_customserial_edit_container_name_label">Name:</string>
    <string name="sim_customserial_edit_delay_timeout_label">Timeout (ms):</string>
    <string name="sim_customserial_edit_recv_timeout_label">Timeout (ms):</string>
    <string name="sim_customserial_edit_recv_match_label">Match:</string>
    <string name="sim_customserial_edit_recv_pattern_label">Pattern:</string>
    <string name="sim_customserial_edit_recv_ignore_case">Ignore case</string>
    <string name="sim_customserial_edit_recv_interpret_escapes">Interpret \\r, \\n, \\xhh...</string>
    <string name="sim_customserial_edit_recv_match_exact">Exact</string>
    <string name="sim_customserial_edit_recv_match_regex">Regular expression</string>
    <string name="sim_custom_serial_script_share_script_title">Share script</string>
    <string name="sim_custom_serial_script_export_share">Share</string>
    <string name="sim_custom_serial_script_clear_emu_running">Running serial script running please stop it before</string>
    <string name="sim_custom_serial_script_clear_confirm">This will delete completely your script, are you sure ?</string>
    <string name="sim_custom_serial_script_block_name_container">Container</string>
    <string name="sim_custom_serial_script_block_name_delay">Delay</string>
    <string name="sim_custom_serial_script_block_name_send">Send</string>
    <string name="sim_custom_serial_script_block_name_recv">Receive</string>
    <string name="sim_custom_serial_script_block_name_and">AND</string>
    <string name="sim_custom_serial_script_block_name_or">OR</string>
    <string name="sim_custom_serial_script_block_name_xor">XOR</string>
    <string name="sim_custom_serial_script_block_name_not">NOT</string>
    <string name="sim_custom_serial_script_add_and">AND</string>
    <string name="sim_custom_serial_script_add_or">OR</string>
    <string name="sim_custom_serial_script_add_xor">XOR</string>
    <string name="sim_custom_serial_script_add_not">NOT</string>
    <string name="sim_custom_serial_script_del">Delete</string>
    <string name="sim_custom_serial_script_dup">Clone</string>
    <string name="sim_custom_serial_script_start">Start</string>
    <string name="sim_custom_serial_script_stop">Stop</string>
    <string name="sim_custom_serial_script_play">Play custom serial script</string>
    <string name="sim_custom_serial_script_pause">Pause custom serial script</string>
    <string name="sim_custom_serial_script">Custom serial script</string>
    <string name="sim_custom_serial_script_open">Configure</string>
    <string name="sim_custom_serial_script_edit">Edit</string>
    <string name="sim_custom_serial_script_link">Link</string>
    <string name="sim_custom_serial_script_add_block">Add block</string>
    <string name="sim_custom_serial_script_add_delay">Delay</string>
    <string name="sim_custom_serial_script_add_recv">Recv</string>
    <string name="sim_custom_serial_script_add_send">Send</string>
    <string name="sim_custom_serial_script_add_container">Container</string>
    <string name="sim_custom_serial_script_clear">Clear</string>
    <string name="sim_custom_serial_script_delay">Delay</string>
    <string name="sim_custom_serial_script_receive">Receive</string>
    <string name="sim_custom_serial_script_send">Send</string>
    <string name="sim_custom_serial_script_container">Container</string>
    <string name="sim_ignition_off">Ignition OFF</string>
    <string name="sim_ignition_on">Ignition ON</string>
    <string name="sim_no_content">No content in sim desc</string>
    <string name="sim_ecu_replay_editor_label">JSON trace</string>
    <string name="sim_ecu_replay_validate">Load</string>
    <string name="sim_ecu_replay_format">Format</string>
    <string name="sim_ecu_replay_copy">Copy</string>
    <string name="sim_ecu_replay_paste">Paste</string>
    <string name="sim_ecu_replay_import_file">Import file</string>
    <string name="sim_ecu_gui_menu_start_godot">Open in Godot</string>
    <string name="sim_menu_clear">Clear</string>
    <string name="sim_menu_load_latest">Load latest</string>
    <string name="sim_menu_load">Load</string>
    <string name="sim_menu_save_as">Save as ...</string>
    <string name="sim_menu_import_clipboard">Import from clipboard</string>
    <string name="sim_menu_export_clipboard">Export to clipboard</string>
    <string name="sim_list_menu_delete">Delete</string>
    <string name="sim_list_menu_export">Export (clipboard)</string>
    <string name="sim_list_menu_export_file">Export as file</string>
    <string name="sim_list_menu_open_config">Load</string>
    <string name="sim_list_menu_share">Share</string>
    <string name="stats_requests">Requests: %1$d</string>
    <string name="stats_responses">Responses: %1$d</string>
    <string name="stats_qps">Queries/s: %.2f</string>
    <string name="stats_top_requests">Top requests:</string>
    <string name="settings_wifi_startBtn">Start Wi-Fi Hotspot</string>
    <string name="settings_wifi_hotspot_gatewayIpBtn">Fetch ELM327 emulator IP using root</string>
</resources>