<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/action_menu_group_sim">
        <item
            android:id="@+id/sim_menu_clear"
            android:title="@string/sim_menu_clear" />

        <item
            android:id="@+id/sim_menu_load_latest"
            android:title="@string/sim_menu_load_latest" />

        <item
            android:id="@+id/sim_menu_load"
            android:title="@string/sim_menu_load" />

        <item
            android:id="@+id/sim_menu_save_as"
            android:title="@string/sim_menu_save_as" />

        <item
            android:id="@+id/sim_menu_import_clipboard"
            android:title="@string/sim_menu_import_clipboard" />

        <item
            android:id="@+id/sim_menu_export_clipboard"
            android:title="@string/sim_menu_export_clipboard" />
    </group>

    <group android:id="@+id/action_menu_group_sim_ecu_gui_default">
        <item
            android:id="@+id/sim_ecu_gui_menu_start_godot"
            android:title="@string/sim_ecu_gui_menu_start_godot" />
    </group>

    <group android:id="@+id/action_menu_group_sim_list_any_selection">
        <item
            android:id="@+id/sim_list_menu_delete"
            android:title="@string/sim_list_menu_delete" />
    </group>

    <group android:id="@+id/action_menu_group_sim_list_single_selection">
        <item
            android:id="@+id/sim_list_menu_export"
            android:title="@string/sim_list_menu_export" />

        <item
            android:id="@+id/sim_list_menu_export_file"
            android:title="@string/sim_list_menu_export_file" />

        <item
            android:id="@+id/sim_list_menu_open"
            android:title="@string/sim_list_menu_open_config" />

        <item
            android:id="@+id/sim_list_menu_share"
            android:title="@string/sim_list_menu_share" />

    </group>

    <group android:id="@+id/action_menu_group_sim_custom_serial_script">
        <item
            android:id="@+id/sim_custom_serial_script_add_block"
            android:title="@string/sim_custom_serial_script_add_block">
            <menu>
                <item
                    android:id="@+id/sim_custom_serial_script_add_delay"
                    android:title="@string/sim_custom_serial_script_add_delay" />

                <item
                    android:id="@+id/sim_custom_serial_script_add_recv"
                    android:title="@string/sim_custom_serial_script_add_recv" />

                <item
                    android:id="@+id/sim_custom_serial_script_add_send"
                    android:title="@string/sim_custom_serial_script_add_send" />

                <item
                    android:id="@+id/sim_custom_serial_script_add_container"
                    android:title="@string/sim_custom_serial_script_add_container" />
            </menu>
        </item>
        <item
            android:id="@+id/sim_custom_serial_script_clear"
            android:title="@string/sim_custom_serial_script_clear" />
        <item
            android:id="@+id/sim_custom_serial_script_import_clipboard"
            android:title="@string/sim_custom_serial_script_import_clipboard" />
        <item
            android:id="@+id/sim_custom_serial_script_export_menu"
            android:title="@string/sim_custom_serial_script_export_menu" >
            <menu>
                <item
                    android:id="@+id/sim_custom_serial_script_export_clipboard"
                    android:title="@string/sim_custom_serial_script_export_clipboard" />
                <item
                    android:id="@+id/sim_custom_serial_script_export_file"
                    android:title="@string/sim_custom_serial_script_export_file" />
            </menu>
        </item>
        <item
            android:id="@+id/sim_custom_serial_script_export_share"
            android:title="@string/sim_custom_serial_script_export_share" />
    </group>

    <group android:id="@+id/action_menu_group_sim_custom_serial_script_any_element_selected">
        <item
            android:id="@+id/sim_custom_serial_script_del"
            android:title="@string/sim_custom_serial_script_del" />
        <item 
            android:id="@+id/sim_custom_serial_script_dup"
            android:title="@string/sim_custom_serial_script_dup" />
    </group>

</menu>