<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_section_general">

        <SwitchPreferenceCompat
            android:key="app_emu_autostart"
            android:title="@string/settings_autostart"
            android:defaultValue="true" />

        <ListPreference
            android:key="log_level"
            android:title="@string/settings_logLevelLabel"
            android:entries="@array/log_levels"
            android:entryValues="@array/log_level_values"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="DEBUG" />

        <SwitchPreferenceCompat
            android:key="log_timestamp"
            android:title="@string/settings_log_timestamp"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="log_exchange_dup_search"
            android:title="@string/settings_log_exchange_dup_search"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="log_exchange_dup_search_depth"
            android:title="@string/settings_log_exchange_dup_search_depth"
            android:dialogTitle="@string/settings_log_exchange_dup_search_depth"
            android:defaultValue="5"
            android:inputType="number" />

        <SwitchPreferenceCompat
            android:key="log_signal_value"
            android:title="@string/settings_log_signal_value"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_elmTitle">

        <ListPreference
            android:key="protocol"
            android:title="@string/settings_protocolLabel"
            android:entries="@array/elm_protocols"
            android:entryValues="@array/elm_protocol_values"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:key="com_bt_enabled"
            android:title="@string/settings_network_bluetooth"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="com_ble_enabled"
            android:title="@string/settings_network_ble"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="com_nt_enabled"
            android:title="@string/settings_network_network"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_section_bluetooth">

        <EditTextPreference
            android:key="com_bt_name"
            android:title="@string/settings_btLabel"
            android:dialogTitle="@string/settings_btLabel"
            android:hint="@string/settings_btHint" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_section_ble">

        <ListPreference
            android:key="ble_profile"
            android:title="@string/settings_ble_profiles_title"
            android:entries="@array/ble_profiles"
            app:useSimpleSummaryProvider="true"
            android:entryValues="@array/ble_profile_values" />

        <Preference
            android:key="ble_custom"
            android:title="@string/settings_ble_profile_custom_title"
            android:summary="@string/settings_ble_profile_service_uuid" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_section_wifi">

        <Preference
            android:key="wifi_hotspot"
            android:title="@string/settings_wifi_startBtn" />

        <com.github.autodiag2.elm327emu.ui.settings.WifiQrCodePreference
            android:key="wifi_qrcode"
            android:title="@null" />

        <com.github.autodiag2.elm327emu.ui.settings.CopyableIpPreference
            android:key="wifi_ip_addr"
            android:title="@string/settings_wifi_hotspot_gatewayIpBtn" />

    </PreferenceCategory>

</PreferenceScreen>