<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/stats_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_requests"/>

    <TextView
        android:id="@+id/stats_responses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_responses"/>

    <TextView
        android:id="@+id/stats_qps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_qps"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_top_requests"
        android:paddingTop="12dp"/>

    <LinearLayout
        android:id="@+id/stats_top_requests"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>